Resolve merge conflict in index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--upd1asdasdadad-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -794,7 +795,7 @@
         </div>
 
         <div class="portfolio-section fade-element">
-            <h3>View Portfolio</h3>
+            <h3>Links (currently empty) & Portofolio</h3>
             <div class="portfolio-links">
                 <a href="#" class="portfolio-link-item">
                     <span>LinkTree</span>
@@ -857,7 +858,7 @@
             imageContainers.forEach(container => {
                 const slides = container.querySelectorAll('.image-slide');
                 let currentSlide = 0;
-                
+                //ee
                 // Function to show next slide
                 function showNextSlide() {
                     // Hide current slide
